--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -465,7 +465,7 @@ body {
     max-width: 610px;
     margin: 0;
     margin-left: auto;
-    font-size: 20px;
+    font-size: 24px;
     line-height: 34px;
     color: $ed-white;
   }
@@ -501,7 +501,7 @@ body {
 
     .hero-subtitle {
       margin-bottom: 15px;
-      font-size: 20px;
+      font-size: 24px;
       font-weight: 700;
       line-height: 34px;
       color: $ed-black;
@@ -1228,6 +1228,8 @@ body {
 
   .expertise-item-title {
     margin: 0;
+    padding: 20px;
+    margin-top: 10px;
     font-size: 36px;
     font-weight: 700;
     line-height: normal;
@@ -1244,6 +1246,8 @@ body {
 
   .expertise-item-text {
     margin: 0;
+    padding: 20px;
+    margin-top: 10px;
     font-size: 26px;
     font-weight: 400;
     line-height: normal;
@@ -1261,10 +1265,13 @@ body {
   .expertise-list-items {
     padding: 0;
     margin: 0;
+    margin-top: 30px;
     list-style: none;
     column-count: 2;
 
     .expertise-list-item {
+      padding: 0;
+      margin: 0;
       font-size: 26px;
       font-weight: 400;
       line-height: normal;
