--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -444,13 +444,13 @@ body {
   .hero-video-container {
     display: flex;
     width: 100%;
-    padding-left: 86px;
+    padding-left: 42px;
     overflow: hidden;
   }
 
   .hero-video {
     width: 100%;
-    height: 280px;
+    height: 303px;
     margin-left: auto;
     margin-bottom: 36px;
     object-fit: cover;
@@ -539,6 +539,8 @@ body {
     }
 
     .hero-title {
+      padding: 0;
+      padding-left: 40px;
       margin-bottom: 36px;
       font-size: 88px;
       font-weight: 700;
@@ -560,6 +562,8 @@ body {
 
     .hero-subtitle {
       margin: 0;
+      padding: 0;
+      padding-left: 40px;
       font-size: 58px;
       font-weight: 700;
       line-height: 1;
@@ -607,6 +611,7 @@ body {
 
 .our-world {
   padding: 30px 0 0;
+  background-color: $ed-white;
 
   @include media-breakpoint-up(lg) {
     padding: 100px 40px 0;
@@ -1153,6 +1158,7 @@ body {
   }
 
   .quality-title {
+    padding-left: 20px;
     margin-left: -0.09em;
     margin-bottom: 30px;
     font-size: 68px;
@@ -1165,6 +1171,10 @@ body {
       font-size: 92px;
       line-height: 110px;
     }
+  }
+
+  .quality-title, img {
+    padding-left: 30px;
   }
 
   .quality-items {
@@ -1300,6 +1310,8 @@ body {
   }
 
   .career-title {
+    padding: 0;
+    padding-left: 40px;
     margin-bottom: 30px;
     font-size: 54px;
     font-weight: 700;
@@ -1318,6 +1330,8 @@ body {
   }
 
   .career-subtitle {
+    padding: 0;
+    padding-left: 40px;
     margin-bottom: 30px;
     font-size: 28px;
     font-weight: 400;
