--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -473,7 +473,7 @@ body {
 
   &.our-world {
     padding: 30px 0;
-    background-color: $ed-white;
+    background-color: $ed-white-1;
 
     @include media-breakpoint-up(lg) {
       padding: 15px;
@@ -616,7 +616,7 @@ body {
 
 .our-world {
   padding: 30px 0 0;
-  background-color: $ed-white;
+  background-color: $ed-white-1;
 
   @include media-breakpoint-up(lg) {
     padding: 100px 40px 0;
