--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -788,7 +788,7 @@ body {
     padding: 0;
     margin: 0;
     margin-right: 7px;
-    margin-top: 30px;
+    margin-top: 20%;
     list-style: none;
     line-height: 36px;
 
