--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -790,7 +790,7 @@ body {
     margin-right: 7px;
     margin-top: 20%;
     list-style: none;
-    line-height: 36px;
+    line-height: 1;
 
     .description-list-menu {
       display: inline;
@@ -798,7 +798,7 @@ body {
       padding: 0;
       font-size: 26px;
       font-weight: bold;
-      line-height: 46px;
+      line-height: 1;
       color: $ed-brown;
 
       @include media-breakpoint-up(lg) {
