--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -484,7 +484,6 @@ body {
     }
 
     .hero-title {
-      margin-left: -0.09em;
       margin-bottom: 15px;
       font-size: 48px;
       line-height: 1;
@@ -497,13 +496,12 @@ body {
       @include media-breakpoint-up(lg) {
         margin-bottom: 30px;
         font-size: 180px;
-        padding-left: 90px;
+        padding-left: 75px;
       }
     }
 
     .hero-subtitle {
       margin-bottom: 15px;
-      padding-left: 90px;
       font-size: 24px;
       font-weight: 700;
       line-height: 34px;
@@ -511,13 +509,14 @@ body {
 
       @include media-breakpoint-up(lg) {
         margin-bottom: 40px;
+        font-size: 24px;
+        padding-left: 90px;
       }
     }
 
     .hero-text {
       max-width: 100%;
       margin: 0;
-      padding-left: 90px;
       font-size: 24px;
       font-weight: 400;
       line-height: 1.25;
@@ -830,6 +829,11 @@ body {
       flex-direction: column;
       padding-right: 52px;
 
+      @include media-breakpoint-up(lg) {
+        flex-direction: column;
+        padding-right: 52px;
+      }
+
       .partner-tab-item {
         position: relative;
         width: 160px;
@@ -869,7 +873,8 @@ body {
     }
 
     .partner-tab-cover {
-      position: relative;
+      display: inline-block;
+      position: absolute;
       width: 100%;
       z-index: 10;
 
@@ -877,6 +882,13 @@ body {
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+
+      @include media-breakpoint-up(lg) {
+        display: block;
+        position: relative;
+        width: 100%;
+        z-index: 10;
       }
     }
   }
