--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -445,8 +445,12 @@ body {
   .hero-video-container {
     display: flex;
     width: 100%;
-    padding-left: 42px;
+    padding-left: 25px;
     overflow: hidden;
+
+    @include media-breakpoint-up(lg) {
+      padding-left: 40px;
+    }
   }
 
   .hero-video {
@@ -454,6 +458,7 @@ body {
     height: 303px;
     margin-left: auto;
     margin-bottom: 36px;
+    padding-left: 1%;
     object-fit: cover;
 
     @include media-breakpoint-up(xxxl) {
@@ -795,7 +800,7 @@ body {
       display: inline;
       margin: 0;
       padding: 0;
-      font-size: 26px;
+      font-size: 25px;
       font-weight: bold;
       line-height: 1;
       color: $ed-brown;
@@ -825,13 +830,27 @@ body {
     display: flex;
     margin-bottom: 40px;
 
+    @include media-breakpoint-up(lg) {
+      display: flex;
+      margin-bottom: 40px;
+    }
+
     .partner-tab-items {
-      flex-direction: column;
+      display: flex;
+      position: relative;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      padding: 0;
       padding-right: 52px;
+      padding-top: 70%;
 
       @include media-breakpoint-up(lg) {
         flex-direction: column;
+        margin: 0;
+        padding: 0;
         padding-right: 52px;
+        padding-top: -70%;
       }
 
       .partner-tab-item {
@@ -846,15 +865,18 @@ body {
         }
 
         &.active::before {
-          content: '';
-          position: absolute;
-          top: 0;
-          right: -50%;
-          display: block;
-          width: 300%;
-          height: 100%;
-          background-color: transparentize($ed-red-1, 0.7);
-          z-index: 1;
+
+          @include media-breakpoint-up(lg) {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: -50%;
+            display: block;
+            width: 300%;
+            height: 100%;
+            background-color: transparentize($ed-red-1, 0.7);
+            z-index: 1;
+          }
         }
 
         &:hover {
@@ -865,30 +887,44 @@ body {
 
     .partner-tab-logo {
       position: relative;
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       border-radius: 20px;
       object-fit: cover;
       z-index: 2;
+
+      @include media-breakpoint-up(lg) {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        object-fit: cover;
+        z-index: 2;
+      }
     }
 
     .partner-tab-cover {
-      display: inline-block;
+      display: block;
       position: absolute;
+      padding: 0;
+      margin: 0;
+      margin-right: 10px;
       width: 100%;
       z-index: 10;
+
+      @include media-breakpoint-up(lg) {
+        display: inline;
+        position: relative;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        z-index: 10;
+      }
 
       .partner-tab-cover-img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-      }
-
-      @include media-breakpoint-up(lg) {
-        display: block;
-        position: relative;
-        width: 100%;
-        z-index: 10;
       }
     }
   }
@@ -950,7 +986,7 @@ body {
 
     .footer-menu {
       @include media-breakpoint-up(lg) {
-        margin-right: 82px;
+        margin-right: 62px;
       }
 
       .footer-menu-title {
@@ -1353,7 +1389,7 @@ body {
   }
 
   .expertise-list-items {
-    padding: 0;
+    padding: 20px;
     margin: 0;
     margin-top: 30px;
     list-style: none;
@@ -1430,6 +1466,8 @@ body {
   }
 
   .career-content {
+    padding: 0;
+    padding-left: 40px;
     max-width: 874px;
     font-size: 24px;
     font-weight: 400;
