--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -837,13 +837,15 @@ body {
 
     .partner-tab-items {
       display: flex;
+      flex-wrap: wrap;
       position: relative;
-      justify-content: center;
+      justify-content: space-around;
       align-items: center;
       margin: 0;
       padding: 0;
       padding-right: 52px;
       padding-top: 70%;
+      padding-left: 52px;
 
       @include media-breakpoint-up(lg) {
         flex-direction: column;
@@ -854,6 +856,8 @@ body {
       }
 
       .partner-tab-item {
+        display: flex;
+        flex-wrap: wrap;
         position: relative;
         width: 160px;
         height: 160px;
@@ -865,6 +869,16 @@ body {
         }
 
         &.active::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          right: -50%;
+          left: -100%;
+          display: block;
+          width: 300%;
+          height: 100%;
+          background-color: transparentize($ed-red-1, 0.7);
+          z-index: 1;
 
           @include media-breakpoint-up(lg) {
             content: '';
@@ -886,9 +900,10 @@ body {
     }
 
     .partner-tab-logo {
-      position: relative;
-      width: 80%;
-      height: 80%;
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      height: 100%;
       border-radius: 20px;
       object-fit: cover;
       z-index: 2;
@@ -922,9 +937,13 @@ body {
       }
 
       .partner-tab-cover-img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        width: 90%;
+
+        @include media-breakpoint-up(lg) {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
   }
