responsive industry page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1673,6 +1673,8 @@ body {
       padding: 30px;
 
       @include media-breakpoint-up(lg) {
+        width: 100%;
+        padding: 30px;
         padding: 0 40px 0 0;
         margin-top: auto;
       }
@@ -1733,11 +1735,23 @@ body {
   }
 
   .industry-nav {
-    height: 120px;
-    display: none;
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 50%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    margin: 0;
+    margin-left: -20%;
+    padding: 0;
+    padding-left: -20%;
 
     @include media-breakpoint-up(lg) {
       display: block;
+      height: 120px;
+      margin: 0;
     }
 
     @include media-breakpoint-up(xxxl) {
